deploy/k8s/ingress/marketplace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  namespace: marketplace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: marketplace.local
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-api
                port:
                  number: 8080
          - path: /api/goods(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: goods-api
                port:
                  number: 8080
          - path: /api/catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalog-api
                port:
                  number: 8000
          - path: /api/search(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-api
                port:
                  number: 8000
          - path: /api/order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-api
                port:
                  number: 8000
          - path: /api/favorite(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: favorite-api
                port:
                  number: 8080
          - path: /api/cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-api
                port:
                  number: 8080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 80
